@@ -7,7 +7,7 @@ AM_MAINTAINER_MODE
 
 AC_PROG_CC
 AM_PROG_LIBTOOL
-CFLAGS='-g -O0'
+CFLAGS='-g -O0 -D_GNU_SOURCE'
 AC_SUBST(CFLAGS)
 GNUC_PRETTY=
 GNUC_UNUSED=
